--- a/src/dev/styles/common/_cta.scss
+++ b/src/dev/styles/common/_cta.scss
@@ -67,7 +67,7 @@
     }
 
     @include mixin.media(pc) {
-        grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
         gap: clamp(16px, 3.83vw, 46px);
     }
 }
