feat : メニュー途中まで設計

--- a/src/dev/styles/common/_button.scss
+++ b/src/dev/styles/common/_button.scss
@@ -30,6 +30,10 @@
     @include mixin.media(pc){
         min-width: 340px;
         width: fit-content;
+
+        .m-button--narrow & {
+            min-width: auto;
+        }
     }
 }
 
