--- a/src/dev/styles/common/_box.scss
+++ b/src/dev/styles/common/_box.scss
@@ -3,3 +3,44 @@
 
 // m-box
 //=====================================
+.m-box {
+    position: relative;
+    margin-top: 42px;
+    background-color: base.$background_light_dark_color;
+    border-radius: 10px;
+    padding: 32px;
+    
+    @include mixin.media(pc) {
+        margin-top: 64px;
+        border-radius: 20px;
+        padding: 60px 40px;
+    }
+}
+
+.m-box--narrow {
+    margin-top: 24px;
+    padding: 18px 24px;
+
+    @include mixin.media(pc) {
+        margin-top: 32px;
+        padding: 24px 30px;
+    }
+}
+
+.m-box__inner {
+    >*:first-child {
+        margin-top: 0;
+    }
+}
+
+.m-box__heading {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 0;
+    left: 50%;
+    font-size: mixin.rem(18);
+    
+    @include mixin.media(pc) {
+        font-size: mixin.rem(22);
+    }
+}
