--- a/src/dev/styles/common/_list.scss
+++ b/src/dev/styles/common/_list.scss
@@ -6,6 +6,12 @@
 
 .m-list {
     margin-top: 32px;
+
+    &.col-02 {
+        @include mixin.media(pc) {
+            column-count: 2;
+        }
+    }
 }
 
 .m-list__item {
@@ -44,4 +50,46 @@
 
 .m-list-descItem {
     display: contents;
+}
+
+
+// m-list-columns
+//=====================================
+
+.m-list-columns {
+    margin-bottom: -20px;
+
+    @include mixin.media(pc) {
+        @for $i from 2 through 4 { 
+            &.col-0#{$i} {
+                column-count: #{$i};
+            }
+        }
+    }
+}
+
+.m-list-columns--narrow {
+    .m-list-columns__item {
+    width: fit-content;
+}
+}
+
+.m-list-columns__item {
+    margin-bottom: 20px;
+    // min-width: calc(1080px / 4);
+}
+
+.m-list-columns__list {
+    margin-top: 16px;
+    column-count: 1;
+}
+
+.m-list-columns__itemHeading {
+    line-height: 1;
+    font-weight: bold;
+    font-size: mixin.rem(14);
+    
+    @include mixin.media(pc) {
+        font-size: mixin.rem(16);
+    }
 }
