--- a/src/dev/styles/common/_breadcrumb.scss
+++ b/src/dev/styles/common/_breadcrumb.scss
@@ -4,7 +4,7 @@
 // m-breadcrumb
 //=====================================
 .breadcrumbs {
-    padding: 60px 40px 0;
+    padding: 0 40px;
     display: flex;
     justify-content: center;
     column-gap: 8px;
@@ -17,7 +17,7 @@
     }
 
     @include mixin.media(pc) {
-        padding: 96px 80px 0;
+        padding: 0 80px;
     }
 } 
 
